--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 
   <!-- Our own CSS stylesheet -->
-  <link rel="stylesheet" href="./css/styles.css" media="screen">
+  <link rel="stylesheet" href="./css/style.css" media="screen">
 
 </head>
 
