added images to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -54,15 +54,15 @@
           <hr />
           <div class="row">
             <div class="col-sm-6 col-md-12 col-lg-6">
-              <img class="img-fluid port-image" src="https://via.placeholder.com/350x350" alt=""> <br>
+              <img class="img-fluid port-image" src="./images/About me .jpg" alt=""> <br>
             </div>
             <div class="col-sm-6 col-md-12 col-lg-6">
-              <img class="img-fluid port-image" src="https://via.placeholder.com/350x350" alt=""> 
+              <img class="img-fluid port-image" src="./images/weather dashboard.jpg" alt=""> 
             </div>
           </div>
           <div class="row">
             <div class="col-sm-6 col-md-12 col-lg-6">
-              <img class="img-fluid port-image" src="https://via.placeholder.com/350x350" alt="">
+              <img class="img-fluid port-image" src="./images/Wokproject1.jpg" alt="">
             </div>
           
             </div>
