added links to github and linkedin profiles

--- a/portfolio.html
+++ b/portfolio.html
@@ -64,7 +64,11 @@
             <div class="col-sm-6 col-md-12 col-lg-6">
               <img class="img-fluid port-image" src="./images/Wokproject1.jpg" alt="">
             </div>
-          
+            <p>Links to my Linkedin and Github Profiles</p>
+              <ul>
+                <li>www.linkedin.com/in/angelica-randall-b80a4299</li>
+                <li>https://github.com/Arandall88</li>
+              </ol>
             </div>
           </div>
         </article>
