fixed github and linkedin links on portfolio

--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,6 @@
         <!-- /.container -->
       </nav>
       <!-- End of navbar -->
-
   <!-- Start of container -->
   <main class="container">
     <section class="row">
@@ -93,7 +92,10 @@
 
   <!-- Bootstrap CDN -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script></script>
-
+  
+  <p>Email: Drivenbysuccess21@gmail.com
+      Phone Number: (559)817-9094
+  </p>
 </body>
 
 </html>
