--- a/portfolio.html
+++ b/portfolio.html
@@ -64,13 +64,10 @@
             <div class="col-sm-6 col-md-12 col-lg-6">
               <img class="img-fluid port-image" src="./images/Wokproject1.jpg" alt="">
             </div>
-          
-              <ul>
-                <p>Links to my Linkedin and Github Profiles</p>
-                <li>www.linkedin.com/in/angelica-randall-b80a4299</li>
-                <li>https://github.com/Arandall88</li>
-              </ul>
-            </div>
+            <a href ="http://www.linkedin.com/in/angelica-randall">Linkedin</a> <br>
+            <a href ="http://github.com/Arandall88">Github</a>
+
+             </div>
           </div>
         </article>
       </div>
