updated portfolio with project 1

--- a/portfolio.html
+++ b/portfolio.html
@@ -64,6 +64,9 @@
             <div class="col-sm-6 col-md-12 col-lg-6">
               <img class="img-fluid port-image" src="./images/Wokproject1.jpg" alt="">
             </div>
+            <div class="col-sm-6 col-md-12 col-lg-6">
+              <img class="img-fluid port-image" src="./images/Music-Boxx.jpg" alt=""> 
+            </div>
             <a href ="http://www.linkedin.com/in/angelica-randall">Linkedin</a> <br>
             <a href ="http://github.com/Arandall88">Github</a>
 
