--- a/contact.html
+++ b/contact.html
@@ -62,7 +62,7 @@
           <div class="form-group">
             <label for="email" class="col-sm-2 control-label">Email</label>
             <div class="col-sm-10">
-              <input type="password" class="form-control" id="email" placeholder="Email">
+              <input type="email" class="form-control" id="email" placeholder="Email">
             </div>
           </div>
           <div class="form-group">
